--- a/config/nginx/conf/dev.conf
+++ b/config/nginx/conf/dev.conf
@@ -7,29 +7,28 @@ server {
   listen [::]:80;
   server_name _;
 
-  set $dev "http://192.168.1.3:3000";
+  root /var/www/web;
+  index index.html;
 
   location / {
-    proxy_pass $dev;
+    try_files $uri $uri/ /index.html =404;
   }
 
   location ^~ /static/ {
-    proxy_pass $dev;
+    try_files $uri $uri/;
   }
 
-  location /sockjs-node/ {
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $remote_addr;
-    proxy_set_header Host $host;
+  # location /sockjs-node/ {
+  #   proxy_set_header X-Real-IP $remote_addr;
+  #   proxy_set_header X-Forwarded-For $remote_addr;
+  #   proxy_set_header Host $host;
 
-    proxy_pass $dev;
-    proxy_redirect off;
-
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "upgrade";
-  }
-
+  #   proxy_pass $dev;
+  #   proxy_redirect off;
+  #   proxy_http_version 1.1;
+  #   proxy_set_header Upgrade $http_upgrade;
+  #   proxy_set_header Connection "upgrade";
+  # }
   location ^~ /api {
     proxy_pass http://backend;
     proxy_set_header X-Forwarded-Host $host;
