--- a/config/nginx/conf/dev.conf
+++ b/config/nginx/conf/dev.conf
@@ -2,20 +2,37 @@ upstream backend {
   server backend:8080;
 }
 
+upstream webpack {
+  server webpack:3000;
+}
+
 server {
   listen 80;
   listen [::]:80;
   server_name _;
 
-  root /var/www/web;
-  index index.html;
+  # root /var/www/web;
+  # index index.html;
 
   location / {
-    try_files $uri $uri/ /index.html =404;
+    proxy_pass http://webpack;
   }
 
   location ^~ /static/ {
-    try_files $uri $uri/;
+    proxy_pass http://webpack;
+  }
+
+  location /sockjs-node/ {
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $remote_addr;
+    proxy_set_header Host $host;
+
+    proxy_pass http://webpack;
+    proxy_redirect off;
+
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
   }
 
   location ^~ /api {
