--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "classnames": "^2.3.2",
     "css-loader": "^6.7.2",
     "css-minimizer-webpack-plugin": "^4.2.2",
+    "currency-icons": "^1.0.14",
     "dotenv": "^16.0.3",
     "dotenv-expand": "^9.0.0",
     "eslint": "^8.28.0",
@@ -42,6 +43,7 @@
     "mobx": "^6.7.0",
     "mobx-react-lite": "^3.4.0",
     "node-sass": "^8.0.0",
+    "nuka-carousel": "^5.4.1",
     "postcss": "^8.4.19",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^7.0.1",
@@ -50,16 +52,20 @@
     "prompts": "^2.4.2",
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
+    "react-currency-flags": "^0.1.2",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
     "react-refresh": "^0.14.0",
     "react-router-dom": "^6.4.3",
+    "react-slick": "^0.29.0",
     "recharts": "^2.1.16",
     "resolve": "^1.22.1",
     "resolve-url-loader": "^5.0.0",
     "semver": "^7.3.8",
+    "slick-carousel": "^1.8.1",
     "source-map-loader": "^4.0.1",
     "style-loader": "^3.3.1",
+    "styled-components": "^5.3.6",
     "terser-webpack-plugin": "^5.3.6",
     "web-vitals": "^3.1.0",
     "webpack": "^5.75.0",
@@ -86,6 +92,7 @@
   },
   "devDependencies": {
     "@feature-sliced/eslint-config": "0.1.0-beta.6",
+    "@types/react-slick": "^0.23.10",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
     "eslint": "^8.28.0",
