--- a/config/nginx/conf/dev.conf
+++ b/config/nginx/conf/dev.conf
@@ -2,10 +2,6 @@ upstream backend {
   server backend:8080;
 }
 
-upstream webpack {
-  server webpack:3000;
-}
-
 server {
   listen 80;
   listen [::]:80;
@@ -14,12 +10,14 @@ server {
   # root /var/www/web;
   # index index.html;
 
+  set $dev "http://10.37.200.19:3000";
+
   location / {
-    proxy_pass http://webpack;
+    proxy_pass $dev;
   }
 
   location ^~ /static/ {
-    proxy_pass http://webpack;
+    proxy_pass $dev;
   }
 
   location /sockjs-node/ {
@@ -27,7 +25,7 @@ server {
     proxy_set_header X-Forwarded-For $remote_addr;
     proxy_set_header Host $host;
 
-    proxy_pass http://webpack;
+    proxy_pass $dev;
     proxy_redirect off;
 
     proxy_http_version 1.1;
