--- a/config/nginx/conf/dev.conf
+++ b/config/nginx/conf/dev.conf
@@ -5,7 +5,7 @@ upstream backend {
 server {
   listen 80;
   listen [::]:80;
-  server_name _;
+  server_name sovcom-moni.ru;
 
   root /var/www/web;
   index index.html;
