[release] add telegram widget

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-refresh": "^0.14.0",
     "react-router-dom": "^6.4.3",
     "react-slick": "^0.29.0",
+    "react-telegram-login": "^1.1.2",
     "recharts": "^2.1.16",
     "resolve": "^1.22.1",
     "resolve-url-loader": "^5.0.0",
